<resources>
    <string name="app_name">Chapter 11</string>
    <string name="name_1">Syarif Fakih Hudin</string>
    <string name="name_2">M. Ulil Hidayat</string>
    <string name="name_3">M. Ainun Arofik</string>
    <string name="sekolah_1">SMK Nurul Umah</string>
    <string name="sekolah_2">SMAN 1 Paninggaran</string>
    <string name="sekolah_3">SMK Syafi\'i Akrom</string>
    <string name="foto_1">foto</string>
    <string name="foto_2">foto2</string>
    <string name="foto_3">foto3</string>
    <string name="nama">nama</string>
    <string name="sekolah">sekolah</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="name">Name</string>
    <string name="Sechool">Sechool</string>
    <string name="Hobby">Hobby</string>
    <string name="Simpan">Simpan</string>
    <string name="Membaca">Membaca</string>
    <string name="Delete">Delete</string>
</resources>