<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".database.AddFriendActivity">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"/>
        <EditText
            android:id="@+id/et_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Sechool"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"/>
        <EditText
            android:id="@+id/et_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hobby"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/Simpan"/>
    </LinearLayout>
</layout>
